--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://eadiazm.github.io/registro-eventos"
+  "homepage": "https://eadiazm.github.io/registro-eventos",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
